* Added string converters for Set, Map, Throwable. \-> Sets and maps are sorted, if possible, in order to improve diffs. * ArrayValidator: avoid converting array into a list until absolutely necessary. * Removed deprecated oss-parent: https://central.sonatype.org/publish/publish-maven/#deprecated-oss-parent * Updated dependencies. * Documentation: replaced "is empty" with "is blank".